objects/Account.object
<CustomObject>
    <fields>
        <fullName>A_R_Balance__c</fullName>
        <description>A/R balance information being brought in from Acorn</description>
        <label>A/R Balance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Team_Email__c</fullName>
        <description>SDT-40683</description>
        <label>Account Team Email</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Team_Member__c</fullName>
        <label>Account Team Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_System__c</fullName>
        <description>Account System Used</description>
        <label>Accounting System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OAKGP</fullName>
                    <label>Oakleaf</label>
                </value>
                <value>
                    <fullName>OAKCA</fullName>
                    <label>Oakleaf Canada</label>
                </value>
                <value>
                    <fullName>WMNAT</fullName>
                    <label>WMI National Accounts</label>
                </value>
                <value>
                    <fullName>WMCAN</fullName>
                    <label>WMI National Accounts Canada</label>
                </value>
                <value>
                    <fullName>IEMGP</fullName>
                    <label>International Environmental Management</label>
                </value>
                <value>
                    <fullName>OAKWL</fullName>
                    <label>Wasteless Environmental Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acorn_Account_Id__c</fullName>
        <description>The Acorn unique identifier for an entry in the dbo.Company table - companyId PK</description>
        <externalId>true</externalId>
        <label>Acorn Account Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Acorn_Company_Status_Id__c</fullName>
        <label>Acorn Company Status Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acorn_Company_Type_Id__c</fullName>
        <description>Foreign key value for the from the dbo.CompanyType table - Client, Vendor, Parent, Collective, Interal, Broker, Deleted Vendors, MonitorCompany</description>
        <label>Acorn Company Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acorn_Location_Code__c</fullName>
        <description>Acorn Location Code</description>
        <label>Acorn Location Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acorn_Location_Id__c</fullName>
        <description>Location Id number</description>
        <label>Acorn Location Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acorn_Location_Notes__c</fullName>
        <label>Acorn Location Notes</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Acorn_Parent_Company_Id__c</fullName>
        <label>Acorn Parent Company Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acorn_Update_DT__c</fullName>
        <description>Acorn Update Date/Time Stamp for SSIS Package</description>
        <label>Acorn Update DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has address been validated?</description>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>if(LEN(ShippingStreet)&gt;0, ShippingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(ShippingCity)&gt;0, ShippingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(ShippingState)&gt;0, ShippingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(ShippingPostalCode)&gt;0, ShippingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(ShippingCountry) &gt;0, ShippingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bids_Allowed__c</fullName>
        <label>Bids Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Audit_Threshold_Type__c</fullName>
        <label>Bill Audit Threshold Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Audit_Threshold_Value__c</fullName>
        <label>Bill Audit Threshold Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_By_Recon__c</fullName>
        <label>Bill By Recon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Spec Level Pricing</fullName>
                </value>
                <value>
                    <fullName>Client level pass through</fullName>
                </value>
                <value>
                    <fullName>Client level non pass through</fullName>
                </value>
                <value>
                    <fullName>Service level pass through</fullName>
                </value>
                <value>
                    <fullName>Service level non pass through</fullName>
                </value>
                <value>
                    <fullName>Service level non pass through no temps</fullName>
                </value>
                <value>
                    <fullName>Migration True-Up</fullName>
                </value>
                <value>
                    <fullName>Migration Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_by_Recon_Effective_Date__c</fullName>
        <label>Bill by Recon Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Model__c</fullName>
        <description>Account particpates in Audit program</description>
        <label>Billing Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SLP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <description>Billing Model</description>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Arrears</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Window__c</fullName>
        <description>The date the bill is due to the client</description>
        <label>Billing Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocked_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if the account is blocked from the IVR</description>
        <label>Blocked Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Text__c</fullName>
        <label>Brand Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Categorization__c.Category__c</field>
                <operation>equals</operation>
                <value>Brand</value>
            </filterItems>
            <filterItems>
                <field>Categorization__c.Client_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Categorization__c</referenceTo>
        <relationshipLabel>Accounts (Brand)</relationshipLabel>
        <relationshipName>BrandAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Rule_Associated__c</fullName>
        <label>Business Rule Associated</label>
        <summaryForeignKey>Business_Rule__c.AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>This denotes the type of company the vendor operates as</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual/Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>Single-member LLC</fullName>
                </value>
                <value>
                    <fullName>S Corp</fullName>
                </value>
                <value>
                    <fullName>C Corp</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust/estate</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>LLS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <description>BU Name</description>
        <label>Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>CategoryAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centrally_Controlled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Centrally Controlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Centrally_Serviced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Centrally Serviced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <description>Easy to pronounce name</description>
        <label>Common Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Channel_Preferences__c</fullName>
        <label>Communication Channel Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Category__c</fullName>
        <label>Company Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Manually_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to change the case sub-status &quot;Pending Manual Dispatch&quot; for Manual Dispatch process.</description>
        <label>Contact Manually Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Renewals__c</fullName>
        <description>Number of contract renewals for a customer. Being mapped from Acorn</description>
        <label>Contract Renewals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <description>This Field Holds the auto Populate Account Number which is unique respective to the Account.</description>
        <formula>AccountNumber</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Location_Code__c</fullName>
        <description>Customers code name for this location</description>
        <inlineHelpText>Name in which the Customer may reference it.</inlineHelpText>
        <label>Location Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Names__c</fullName>
        <description>Doing Business As Names</description>
        <label>DBA Names</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Required__c</fullName>
        <description>Deposit required, Yes, No</description>
        <label>Deposit Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Cost_on_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Cost on Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diversity_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vendor has diversity status</description>
        <label>Diversity Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Categorization__c.Category__c</field>
                <operation>equals</operation>
                <value>Division/Department</value>
            </filterItems>
            <filterItems>
                <field>Categorization__c.Client_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Categorization__c</referenceTo>
        <relationshipLabel>Accounts (Division)</relationshipLabel>
        <relationshipName>DivisionAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_Repairs__c</fullName>
        <description>Denotes whether or not the vendor can do repairs</description>
        <label>Does Repairs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_System__c</fullName>
        <description>ERP system that vendor uses</description>
        <label>ERP System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS 400</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Custom Program</fullName>
                </value>
                <value>
                    <fullName>DAC</fullName>
                </value>
                <value>
                    <fullName>Delta Waste Systems</fullName>
                </value>
                <value>
                    <fullName>DesertMicro</fullName>
                </value>
                <value>
                    <fullName>Dilloware</fullName>
                </value>
                <value>
                    <fullName>DMAS</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
                <value>
                    <fullName>Haulmark</fullName>
                </value>
                <value>
                    <fullName>Infopro</fullName>
                </value>
                <value>
                    <fullName>JWS</fullName>
                </value>
                <value>
                    <fullName>MASS</fullName>
                </value>
                <value>
                    <fullName>Orion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PC Scale</fullName>
                </value>
                <value>
                    <fullName>Peachtree</fullName>
                </value>
                <value>
                    <fullName>PROS 2000</fullName>
                </value>
                <value>
                    <fullName>Quickbooks</fullName>
                </value>
                <value>
                    <fullName>RAMs</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Shared Logic</fullName>
                </value>
                <value>
                    <fullName>SoftPak</fullName>
                </value>
                <value>
                    <fullName>Tower</fullName>
                </value>
                <value>
                    <fullName>Trash Flow</fullName>
                </value>
                <value>
                    <fullName>TRUX</fullName>
                </value>
                <value>
                    <fullName>Vovio</fullName>
                </value>
                <value>
                    <fullName>WAM</fullName>
                </value>
                <value>
                    <fullName>Waste Books</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ebusiness_Vendor__c</fullName>
        <label>Ebusiness Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <defaultValue>TIMEVALUE(&quot;17:00:00.000&quot;)</defaultValue>
        <label>EndTime</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>End_Time_Text__c</fullName>
        <formula>TEXT( EndTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <defaultValue>&apos;17:00:00.000&apos;</defaultValue>
        <label>End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_in_Premium_Delivery_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled in Premium Delivery Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLOW_URL__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;/flow/Change_Task_Assignment?TaskId=&quot;&amp;Task_Id_For_Flow_URL__c&amp;&quot;&amp;retURL=&quot;&amp;Task_Id_For_Flow_URL__c,&quot;TaskRecordLink&quot;)</formula>
        <label>FLOW URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityCode__c</fullName>
        <description>To Store Facility Code.</description>
        <label>FacilityCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Ownership__c</fullName>
        <label>Facility Ownership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Landfills</fullName>
                </value>
                <value>
                    <fullName>Recycling Centers (MRFs)</fullName>
                </value>
                <value>
                    <fullName>Transfer Stations</fullName>
                </value>
                <value>
                    <fullName>Waste to Energy</fullName>
                </value>
                <value>
                    <fullName>Multiple Waste Facilities</fullName>
                </value>
                <value>
                    <fullName>Incinerator</fullName>
                </value>
                <value>
                    <fullName>Demolition Landfill</fullName>
                </value>
                <value>
                    <fullName>Composting Facility</fullName>
                </value>
                <value>
                    <fullName>RDF Facility</fullName>
                </value>
                <value>
                    <fullName>Spec Fuel Facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Tax_Id__c</fullName>
        <description>The Employer Identification Number (EIN), also known as the Federal Employer Identification Number (FEIN) or the Federal Tax Identification Number, is a unique nine-digit number assigned by the Internal Revenue Service (IRS) to business entities operating in the United States for the purposes of identification.</description>
        <inlineHelpText>Federal Employer Identification Number (FEIN) or the Federal Tax Identification Number, is a unique nine-digit number assigned by the Internal Revenue Service (IRS) to business entities operating in the United States</inlineHelpText>
        <label>Federal Tax Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <description>General Ledger Account Number</description>
        <label>GL Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate_Code__c</fullName>
        <description>This field is to display gate Code In Location Account Type</description>
        <label>Gate Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geography</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Categorization__c.Category__c</field>
                <operation>equals</operation>
                <value>Geography</value>
            </filterItems>
            <filterItems>
                <field>Categorization__c.Client_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Categorization__c</referenceTo>
        <relationshipLabel>Accounts (Geography)</relationshipLabel>
        <relationshipName>GeographyAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ignore_Address_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <description>Type of vendor integration</description>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WM Integration</fullName>
                </value>
                <value>
                    <fullName>Third Party Integration</fullName>
                </value>
                <value>
                    <fullName>Supplier Portal</fullName>
                </value>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>Flat File</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Distribution_Email__c</fullName>
        <description>Email address that goes to the entire account team for the specific customer in question.</description>
        <label>Internal DL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Method__c</fullName>
        <description>Vendor method to send  invoice to WM</description>
        <label>Invoice Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Schedule__c</fullName>
        <description>smartfield which calculates when we normally receive the invoice, learns as invoices are received</description>
        <label>Invoice Schedule</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPricingEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pricing Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Locally_Serviced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Location is locally serviced</description>
        <label>Is Locally Serviced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Location_Service_Channel_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Location Service Channel Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Monitored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Monitored on Account</description>
        <label>Is Monitored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pass_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Location is pass through</description>
        <label>Is Pass Through</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portal_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rollup_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates in ACORN if the Client allows rollup on Billing used for Reporting.</description>
        <label>Is Rollup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Get the service channel info</description>
        <label>Is Service Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landfill_Agreement__c</fullName>
        <label>Landfill Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Strategy_Review_Date__c</fullName>
        <label>Last Strategy Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Ranking__c</fullName>
        <label>Legacy Ranking</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library__c</fullName>
        <label>Library</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Billing_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Billing Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locally_Controlled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Where the Location is Locally Controller or not</description>
        <label>Locally Controlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <formula>AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Categorization__c.Category__c</field>
                <operation>equals</operation>
                <value>Location Type</value>
            </filterItems>
            <filterItems>
                <field>Categorization__c.Client_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Categorization__c</referenceTo>
        <relationshipLabel>Accounts (Location Type)</relationshipLabel>
        <relationshipName>LocationCategoryAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>